binrw/tests/ui/invalid_offset_type.stderr
error[E0308]: mismatched types
  --> tests/ui/invalid_offset_type.rs:6:19
   |
3  | #[derive(BinRead)]
   |          ------- arguments to this function are incorrect
...
6  |     #[br(offset = a)]
   |                   ^ expected `u64`, found `u8`
   |
note: associated function defined here
  --> src/binread/options.rs
   |
   |     pub fn with_offset(self, offset: u64) -> Self {
   |            ^^^^^^^^^^^
help: you can convert a `u8` to a `u64`
   |
6  |     #[br(offset = a.into())]
   |                    +++++++

error[E0308]: mismatched types
  --> tests/ui/invalid_offset_type.rs:8:25
   |
3  | #[derive(BinRead)]
   |          ------- arguments to this function are incorrect
...
8  |     #[br(offset_after = d)]
   |                         ^ expected `u64`, found `u8`
   |
note: associated function defined here
  --> src/binread/options.rs
   |
   |     pub fn with_offset(self, offset: u64) -> Self {
   |            ^^^^^^^^^^^
help: you can convert a `u8` to a `u64`
   |
8  |     #[br(offset_after = d.into())]
   |                          +++++++
